--- a/wind_barbs/package.json
+++ b/wind_barbs/package.json
@@ -4,7 +4,7 @@
   "description": "Wind barb plots",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha lib/**.spec.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/andrewgryan/typescript-playground/issues"
   },
-  "homepage": "https://github.com/andrewgryan/typescript-playground#readme"
+  "homepage": "https://github.com/andrewgryan/typescript-playground#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
+  }
 }
