--- a/wind_barbs/package.json
+++ b/wind_barbs/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/andrewgryan/typescript-playground#readme",
   "devDependencies": {
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0"
   }
