--- a/wind_barbs/package.json
+++ b/wind_barbs/package.json
@@ -4,6 +4,7 @@
   "description": "Wind barb plots",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "mocha lib/**.spec.js"
   },
   "repository": {
