--- a/wind_barbs/package.json
+++ b/wind_barbs/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "mocha lib/**.spec.js"
+    "test": "mocha dist/**.spec.js"
   },
   "repository": {
     "type": "git",
