--- a/wind_barbs/package.json
+++ b/wind_barbs/package.json
@@ -26,8 +26,10 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.5",
     "@types/sinon": "^5.0.5",
+    "bokehjs": "^1.0.1",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "sinon": "^7.1.1"
-  }
+  },
+  "dependencies": {}
 }
